--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -44,3 +44,6 @@ jobs:
             docker stop my-running-container || true
             docker rm my-running-container || true
             docker run -d --name my-running-container -p 8080:8080 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+            timeout: 60s
+            command_timeout: 10m
+            debug: true
