--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,10 +33,25 @@ jobs:
           docker push 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
 
       # Step 5: SSH into EC2 and Redeploy Container
-      - name: SSH into EC2 and Update Container
+      - name: SSH into EC2 backend 1 and Update Container
         uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+            docker stop my-running-container || true
+            docker rm my-running-container || true
+            docker run -d --name my-running-container -p 8080:8080 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+            timeout: 60s
+            command_timeout: 10m
+            debug: true
+
+      - name: SSH into EC2 backend 2 and Update Container
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.EC2_HOST_2 }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
