--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build and tag Docker image
         run: |
-          docker build -t 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest .
+          docker build --build-arg JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} -t 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest .
    
       - name: Push Docker image to ECR
         run: |
