--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,7 +46,7 @@ jobs:
             docker stop JavaBackend || true
             docker rm JavaBackend || true
             docker system prune -a --volumes
-            docker run -d --name JavaBackend -p 8080:8080 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+            docker run -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}-d --name JavaBackend -p 8080:8080 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
 
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.0.3
