--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,8 +46,15 @@ jobs:
             docker stop JavaBackend || true
             docker rm JavaBackend || true
             docker system prune -a --volumes -f
-            docker run -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} -d --name JavaBackend -p 8080:8080 --memory=1g 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
-
+            docker run -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+             -e DB_NAME=${{ secrets.DB_NAME }} \
+             -e DB_USER=${{ secrets.DB_USER }} \
+             -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+             -e HOST_MYSQL=${{ secrets.HOST_MYSQL }}  \
+             -d --name JavaBackend \
+             -p 8080:8080 \
+             --memory=1g 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+           
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -61,6 +68,13 @@ jobs:
             docker stop JavaBackend || true
             docker rm JavaBackend || true
             docker system prune -a --volumes -f 
-            docker run -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} -d --name JavaBackend -p 8080:8080 --memory=1g 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
-
+            docker run -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+             -e DB_NAME=${{ secrets.DB_NAME }} \
+             -e DB_USER=${{ secrets.DB_USER }} \
+             -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+             -e HOST_MYSQL=${{ secrets.HOST_MYSQL }}  \
+             -d --name JavaBackend \
+             -p 8080:8080 \
+             --memory=1g 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+           
 
