--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,6 +55,8 @@ jobs:
              -d --name JavaBackend \
              -p 8080:8080 \
              --memory=1g 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+             docker logs -f JavaBackend
+
            
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.0.3
@@ -78,5 +80,7 @@ jobs:
              -d --name JavaBackend \
              -p 8080:8080 \
              --memory=1g 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
+             docker logs -f JavaBackend
+
            
 
