--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -51,6 +51,7 @@ jobs:
              -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
              -e HOST_MYSQL=${{ secrets.HOST_MYSQL }}  \
+             -e METABASE_SECRET_KEY=${{ METABASE_SECRET_KEY }} \
              -e SPRING_PROFILES_ACTIVE=${{ secrets.SPRING_PROFILES_ACTIVE  }}  \
              -d --name JavaBackend \
              -p 8080:8080 \
