--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -76,11 +76,10 @@ jobs:
              -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
              -e HOST_MYSQL=${{ secrets.HOST_MYSQL }}  \
+             -e METABASE_SECRET_KEY=${{ secrets.METABASE_SECRET_KEY }} \
              -e SPRING_PROFILES_ACTIVE=${{ secrets.SPRING_PROFILES_ACTIVE  }}  \
              -d --name JavaBackend \
              -p 8080:8080 \
              --memory=1g 778425189746.dkr.ecr.us-east-1.amazonaws.com/hola-mundo-repo:back_latest
-             
-
-           
+            
 
