--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,6 +52,9 @@ jobs:
              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
              -e HOST_MYSQL=${{ secrets.HOST_MYSQL }}  \
              -e METABASE_SECRET_KEY=${{ secrets.METABASE_SECRET_KEY }} \
+             -e TRACCAR_BASE_URL=${{ secrets.TRACCAR_BASE_URL }} \
+             -e TRACCAR_PASSWORD=${{ secrets.TRACCAR_PASSWORD }} \
+             -e TRACCAR_USERNAME=${{ secrets.TRACCAR_USERNAME }} \
              -e SPRING_PROFILES_ACTIVE=${{ secrets.SPRING_PROFILES_ACTIVE  }}  \
              -d --name JavaBackend \
              -p 8080:8080 \
