--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -51,11 +51,12 @@ jobs:
              -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
              -e HOST_MYSQL=${{ secrets.HOST_MYSQL }}  \
-             -e METABASE_SECRET_KEY=${{ secrets.METABASE_SECRET_KEY }} \
+             -e METABASE_SECRET_KEY=hola \
              -e TRACCAR_BASE_URL=${{ secrets.TRACCAR_BASE_URL }} \
              -e TRACCAR_PASSWORD=${{ secrets.TRACCAR_PASSWORD }} \
              -e TRACCAR_USERNAME=${{ secrets.TRACCAR_USERNAME }} \
              -e SPRING_PROFILES_ACTIVE=${{ secrets.SPRING_PROFILES_ACTIVE  }}  \
+             -e JWT_SECRET_KEY)${{ secrets.JWT_SECRET_KEY }} \
              -d --name JavaBackend \
              -p 8080:8080 \
              --memory=1g 692859936218.dkr.ecr.us-east-1.amazonaws.com/gifa:back_latest
